# mxmamba

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/mxmamba/: benchmark.py  model.py  model_rnn.py  scan.py  weights_util.py
tests/: test_mlx_torch_equivalence.py  test_ref.py  test_scan.py  util.py
